Python/compile.c
@@ -3357,8 +3357,11 @@ compiler_assert(struct compiler *c, stmt_ty s)
 
     if (c->c_optimize)
         return 1;
-    if (s->v.Assert.test->kind == Tuple_kind &&
-        asdl_seq_LEN(s->v.Assert.test->v.Tuple.elts) > 0)
+    if ((s->v.Assert.test->kind == Tuple_kind &&
+        asdl_seq_LEN(s->v.Assert.test->v.Tuple.elts) > 0) ||
+        (s->v.Assert.test->kind == Constant_kind &&
+         PyTuple_Check(s->v.Assert.test->v.Constant.value) &&
+         PyTuple_Size(s->v.Assert.test->v.Constant.value) > 0)) 
     {
         if (!compiler_warn(c, "assertion is always true, "
                               "perhaps remove parentheses?"))
